--- a/freeplane/resources/translations/Resources_fr.properties
+++ b/freeplane/resources/translations/Resources_fr.properties
@@ -133,10 +133,11 @@ CloudColorAction.text = Couleur de nuage...
 ColorProperty.ResetColor = Mise \u00E0 z\u00E9ro des couleurs
 combined = Mixte
 confirmation = Confirmation
-connector = Connecteur[auto]
+connector = Connecteur
 connector_label = Libell\u00e9 du lien
 ConnectorColorAction.text = Couleur du lien...
 CopyAction.text = Copier
+CopyIDAction.text = Copier l'identifiant du noeud
 CopySingleAction.text = Copier un seul
 corrupt_map = Le contenu de la carte est corrompu
 CreateConjunctConditionAction.text = Et
@@ -250,6 +251,7 @@ filter_not = &Non
 filter_note = Note
 filter_or = O&u
 filter_priority = Priorit\u00e9
+filter_regexp_matches = Correspond \u00e0 une expression r\u00e9guli\u00e8re
 filter_select = &S\u00E9lectionner
 filter_selected_node_view = Pour les n\u0153uds s\u00E9lectionn\u00E9s
 filter_selected_node_view_snapshot = Sauver la s\u00e9lection
@@ -310,7 +312,7 @@ HideableAction.tooltip = Marque l'arri\u00e8re-plan de chaque n\u0153ud modifi\u
 HideAllAttributesAction.text = Cacher tous les attributs
 HierarchicalIconsAction.text = Afficher les ic\u00F4nes &hi\u00E9rarchiquement
 HierarchicalIconsAction.tooltip = Si un de mes fils poss\u00e8de une ic\u00f4ne, je vais \u00e9galement afficher cette ic\u00f4ne
-HotKeyInfoAction.text = Key Reference[translate me]
+HotKeyInfoAction.text = Raccourcis clavier
 html_export_based_on_headings = Export en HTML - Bas\u00E9 sur les en-t\u00EAtes
 html_export_fold_all = Export en HTML - Tout pli\u00E9
 html_export_fold_currently_folded = Export en HTML - Respecte les pliages actuels
@@ -482,7 +484,7 @@ mode_na = Mode indisponible
 mode_status = Bascul\u00e9 en mode {0}
 mode_title = Freeplane - {0}
 modes = Modes
-ModesMenuAction.Browse.text = Navigateur cartographique[auto]
+ModesMenuAction.Browse.text = Navigateur de cartes
 ModesMenuAction.File.text = Explorateur de fichiers
 ModesMenuAction.MindMap.text = Concepteur de carte
 most_recent_files = Fichiers r\u00E9ce&nts
@@ -561,6 +563,7 @@ OptionPanel.backup_file_number = Nombre de fichiers de sauvegarde conserv\u00e9s
 OptionPanel.Behaviour = Comportement
 OptionPanel.bezier = bezier
 OptionPanel.bubble = Bulle
+OptionPanel.ca = Catalan
 OptionPanel.Cancel = Annuler
 OptionPanel.center_selected_node = Centrer les n\u0153uds s\u00e9lectionn\u00e9s
 OptionPanel.check_updates_automatically = V\u00e9rifier les mises \u00e0 jour au d\u00e9marrage
@@ -576,6 +579,7 @@ OptionPanel.convert_to_current_version = <html>Convertir automatiquement les car
 OptionPanel.cs = Tch\u00E8que
 OptionPanel.cut_nodes_without_question.tooltip = If this check box is set the nodes are cut without confirmation. This can cause loss of information if pressed without intention.[translate me]
 OptionPanel.cut_nodes_without_question = Couper les n\u0153uds sans confirmation ?
+OptionPanel.da = Danois
 OptionPanel.de = Allemand
 OptionPanel.default = R\u00E9glages par d\u00E9faut
 OptionPanel.default_browser_command_mac.tooltip = <html> et le <strong>Mac</strong>\: (grace \u00E0 Nick \!)</html>
@@ -586,6 +590,7 @@ OptionPanel.default_browser_command_windows_9x.tooltip = <html>Pour Windows (les
 OptionPanel.default_browser_command_windows_9x = Commande pour le navigateur par d\u00E9faut pour Windows 9x
 OptionPanel.default_browser_command_windows_nt.tooltip = <html>Pour Windows (les signes "" sont n\u00e9cessaires \u00e0 cause des liens qui contiennent un caract\u00e8re "\=" dans leur URL).</html>
 OptionPanel.default_browser_command_windows_nt = Commande pour le navigateur par d\u00E9faut pour Windows NT
+OptionPanel.default_charset = Jeux de caract\u00e8res
 OptionPanel.defaultfont.tooltip = <html>Police par d\u00E9faut pour les n\u0153uds. Cela ne fonctionnera que si la police (TrueType) est disponible sur le syst\u00E8me.</html>
 OptionPanel.defaultfont = Police par d\u00E9faut
 OptionPanel.defaultfontsize = Taille de police par d\u00E9faut
@@ -673,6 +678,7 @@ OptionPanel.ja = Japonais
 OptionPanel.key_type_adds_new.tooltip = <html>Saisie au claiver&nbsp;\:\n<ul>\n<li><em>faux</em> remplace le contenu\n<li><em>vrai</em> cr\u00E9e un nouveau n\u0153ud fr\u00E8re\n</ul>\n<em>La fonction n\u00E9cessite que l'option <tt>disable_key_type</tt> ait la valeur <tt>false</tt></html>
 OptionPanel.key_type_adds_new = La frappe ajoute un nouveau n\u0153ud
 OptionPanel.Keystrokes = Raccourcis clavier
+OptionPanel.ko = Cor\u00e9en
 OptionPanel.kr = Cor\u00E9en
 OptionPanel.label_font_family = Type de police
 OptionPanel.label_font_size = Taille de police
@@ -718,7 +724,7 @@ OptionPanel.nodefontbold = Police en gras
 OptionPanel.nodefontitalic = Police en italique
 OptionPanel.nodefontname = Nom de police de n\u0153ud
 OptionPanel.nodefontsize = Taille de police de n\u0153ud
-OptionPanel.nodeshape.tooltip = <html>The style describes the outer form of a node. <br>Possible values\:<br><table border\="1"><tr><td>fork\: </td><td> without surrounding box,</td></tr><tr><td>bubble\: </td><td> node with a surrounding rectangle,</td></tr><tr><td>As parent\: </td><td> take the style from the parent node <br>or the default root node style for the root node,</td></tr><tr><td>Combined\: </td><td> Bubble when node is folded, fork otherwise.</td></tr></table></html>[translate me]
+OptionPanel.nodeshape.tooltip = <html>Le style d\u00e9crit la forme ext\u00e9rieure d'un noeud. <br>Valeurs possibles\:<br><table border\="1"><tr><td>fourche\: </td><td> sans bo\u00eete autour,</td></tr><tr><td>bulle\: </td><td> noeud entour\u00e9 par un rectangle,</td></tr><tr><td>du p\u00e8re\: </td><td> prend le style du noeud p\u00e8re <br>ou le style par d\u00e9faut du noeud racine pour le noeud racine,</td></tr><tr><td>combin\u00e9\: </td><td> bulle quand le noeud est pli\u00e9, fourche sinon.</td></tr></table></html>
 OptionPanel.nodeshape = Mod\u00E8le de n\u0153ud
 OptionPanel.nodetext.tooltip = Vous pouvez ici d\u00e9finir le texte du n\u0153ud. Le texte pr\u00e9c\u00e9dent est supprim\u00e9 lorsqu'un tel mod\u00e8le est appliqu\u00e9.
 OptionPanel.nodetext = Texte de n\u0153ud
@@ -757,12 +763,12 @@ OptionPanel.ru = Russe
 OptionPanel.save_folding = Sauver le pliage
 OptionPanel.save_folding_if_map_is_changed = si la carte est modifi\u00e9e
 OptionPanel.save_modification_times = Sauver les heures de modifications
-OptionPanel.save_only_intrisically_needed_ids.tooltip = When checked, node IDs are omitted that are not used inside the map. Observe, that you can't link external map to specific nodes inside the map without node ID.[translate me]
+OptionPanel.save_only_intrisically_needed_ids.tooltip = Si s\u00e9lectionn\u00e9, les identifiants de noeuds inutilis\u00e9s dans la carte ne sont pas enregistr\u00e9s. Notez que vous ne pouvez pas cr\u00e9er des liens vers des cartes externes sans identifiant de noeud.
 OptionPanel.save_only_intrisically_needed_ids = Enregistre uniquement les identifiants de n\u0153uds utilis\u00E9s
 OptionPanel.script.tooltip = Le script en code source Groovy.
 OptionPanel.script = Script
 OptionPanel.script_directories = 
-OptionPanel.script_user_key_name_for_signing.tooltip = <html>If you want to sign your scripts, enter the alias of the key here. <br>The key is expected to reside in the default keystore. <br>The password of the key's secret key must coincide with the keystore password (this is the default).</html>[translate me]
+OptionPanel.script_user_key_name_for_signing.tooltip = <html>Si vous d\u00e9sirez signer vos scripts, entrez l'alias de la cl\u00e9 ici. <br>La cl\u00e9 doit se trouver dans le trousseau de d\u00e9faut. <br>Le mot de passe de la cl\u00e9 priv\u00e9e doit correspondre au mot de passe du trousseau (par d\u00e9faut).</html>
 OptionPanel.script_user_key_name_for_signing = Alias optionnel de la clef utilisateur pour signer
 OptionPanel.scrollbar_increment = Vitesse
 OptionPanel.se = Su\u00e9dois
@@ -869,6 +875,8 @@ OptionPanel.standardselectednoderectanglecolor.tooltip = <html>Couleur de marqua
 OptionPanel.standardselectednoderectanglecolor = Couleur des n\u0153uds s\u00E9lectionn\u00E9s
 OptionPanel.structured_html_import = Import HTML comme structure de n\u0153uds
 OptionPanel.structured_icon_toolbar = Barre d'outils ic\u00f4nes structur\u00e9es
+OptionPanel.sv = Su\u00e9dois
+OptionPanel.text.use_ctrl_key = Utilisez 'Attribuer un raccourci' dans le menu Outils
 OptionPanel.time_for_automatic_save.tooltip = <html>intervalle entre deux actions cons\u00E9cutives d'enregistrement automatique (en millisecondes). Pour d\u00E9sactiver l'enregistrement automatique, mettre cette valeur \u00E0 2000000000.</html>
 OptionPanel.time_for_automatic_save = D\u00E9lai pour l'enregistrement automatique (en millisecondes)
 OptionPanel.time_for_delayed_selection.tooltip = <html>D\u00E9lai de s\u00E9lection des n\u0153uds lorsque le pointeur de la souris est dessus (en millisecondes).<br>Mettez 1 dans cette valeur si vous souhaitez une s\u00E9lection directe.</html>
@@ -979,7 +987,7 @@ RedoAction.text = R\u00E9tablir
 RedoFilterAction.text = R\u00E9tablir
 ReminderHookAction.text = Supprimer l'alerte
 ReminderHookAction.tooltip = Supprime une alerte d'un n\u0153ud.
-remove_shortcut_question = Remplacer frappe?[auto]
+remove_shortcut_question = Remplacer raccourci ?
 RemoveAllIconsAction.text = Supprimer toutes les ic\u00f4nes
 RemoveConnectorAction.text = Supprimer le lien
 RemoveIcon_0_Action.text = Supprimer la premi\u00e8re ic\u00f4ne
@@ -1021,6 +1029,8 @@ selection_method_delayed = S\u00E9lection retard\u00E9e
 selection_method_direct = S\u00E9lection par pointage
 SelectNoteAction.text = Aller \u00e0 l'\u00e9diteur de notes
 SelectNoteAction.tooltip = Placer le curseur dans l'\u00e9diteur de notes pour la modifier
+set_accelerator_on_next_click_action = Cliquez sur n'importe quel \u00e9l\u00e9ment du menu pour attribuer un nouveau raccourci
+SetAcceleratorOnNextClickAction.text = Attribuer un raccourci
 SetImageByFileChooserAction.text = Image...
 SetLinkByFileChooserAction.text = Lien hypertexte fichier...
 SetLinkByTextFieldAction.text = Lien hypertexte libre...
@@ -1033,7 +1043,7 @@ ShowAllAttributesAction.text = Voir tous les attributs
 ShowAncestorsAction.text = Montrer les p\u00e8res
 ShowAttributeDialogAction.text = Gestionnaire d'&attributs...
 ShowDescendantsAction.text = Afficher les fils
-ShowFilterToolbarAction.text = Filtre
+
 ShowHideNoteAction.text = Panneau de notes
 ShowHideNoteAction.tooltip = Afficher ou masquer le panneau de notes
 ShowSelectedAttributesAction.text = Voir les attributs s\u00E9lectionn\u00E9s
