--- a/freeplane/resources/translations/Resources_ja.properties
+++ b/freeplane/resources/translations/Resources_ja.properties
@@ -220,8 +220,8 @@ ExportToOoWriter.text = Open Office Writer \u30c9\u30ad\u30e5\u30e1\u30f3\u30c8\
 ExportToOoWriter.tooltip = \u5c55\u958b\u30ce\u30fc\u30c9\u306f\u6587\u66f8\u306e\u9aa8\u683c\uff08\u7ae0\u30fb\u7bc0\u7acb\u3066\uff09\u3092\u5f62\u6210\u3057\u307e\u3059\u3002\u6298\u308a\u7573\u307f\u30ce\u30fc\u30c9\u306f\u6587\u66f8\u306e\u5185\u5bb9\uff08\u6bb5\u843d\u7b49\uff09\u3068\u306a\u308a\u307e\u3059\u3002
 ExportWithXSLTDialog.text = XSLT \u3092\u4f7f\u7528...
 extension_menu = \u30b9\u30bf\u30a4\u30eb(&S)
-extract_link_from_text.tooltip = \u30ce\u30fc\u30c9\u306b\u542b\u307e\u308c\u308b\u6587\u5b57\u5217\u3092\u57fa\u306b\u30cf\u30a4\u30d1\u30fc\u30ea\u30f3\u30af\u3092\u8a2d\u5b9a\u3057\u307e\u3059\u3002
 ExtractLinkFromTextAction.text = \u30ce\u30fc\u30c9\u6587\u5b57\u5217\u304b\u3089\u30ea\u30f3\u30af\u8a2d\u5b9a
+ExtractLinkFromTextAction.tooltip = \u30ce\u30fc\u30c9\u306b\u542b\u307e\u308c\u308b\u6587\u5b57\u5217\u3092\u57fa\u306b\u30cf\u30a4\u30d1\u30fc\u30ea\u30f3\u30af\u3092\u8a2d\u5b9a\u3057\u307e\u3059\u3002
 f_button_unassigned = \uff1c\u672a\u5b9a\u7fa9\uff1e
 FaqOpenURLAction.text = \u3088\u304f\u3042\u308b\u8cea\u554f
 file = \u30d5\u30a1\u30a4\u30eb(&F)
@@ -551,7 +551,8 @@ OptionalDontShowMeAgainDialog.rememberMyDescision = \u3053\u306e\u8a2d\u5b9a\u30
 OptionPanel.absolute = \u7d76\u5bfe\u7684
 OptionPanel.accessories/plugins/AutomaticLayout.properties_PatternTabName = \u81ea\u52d5\u30ec\u30a4\u30a2\u30a6\u30c8
 OptionPanel.always_fold_all_after_load = \u3059\u3079\u3066\u6298\u308a\u7573\u3080
-OptionPanel.always_load_last_maps = <html>\u30de\u30c3\u30d7\u3092\u6307\u5b9a\u3057\u305f\u8d77\u52d5\u3067\u3082\u3001\u4e0a\u306e\u30aa<br>\u30d7\u30b7\u30e7\u30f3\u6307\u5b9a\u306e\u30de\u30c3\u30d7\u3092\u542b\u3081\u3066\u958b\u304f</html>
+OptionPanel.always_load_last_maps = \u8d77\u52d5\u6642\u306b\u3001\u5e38\u306b\u4e0a\u8a18\u30aa\u30d7\u30b7\u30e7\u30f3\u3092\u5c0a\u91cd
+OptionPanel.always_load_last_maps.tooltip = <html>\u30de\u30c3\u30d7\u3092\u6307\u5b9a\u3057\u3066 FP \u3092\u8d77\u52d5\u3059\u308b\u5834\u5408\u3067\u3082\u3001\u4e0a\u8a18\u30aa\u30d7\u30b7\u30e7\u30f3\u3092\u53cd\u6620\u3057\u307e\u3059\u3002<br>\uff08\u30de\u30c3\u30d7\u3092\u6307\u5b9a\u3057\u3066 FP \u3092\u8d77\u52d5\u3059\u308b\u5834\u5408\u3001\u901a\u5e38\u3001\u524d\u56de\u7d42\u4e86\u6642\u306e\u30d5\u30a1\u30a4\u30eb\u306e\u72b6\u614b\u3092\u7121\u8996\u3057\u307e\u3059\u3002\uff09</html>
 OptionPanel.always_save_folding = \u5e38\u306b\u4fdd\u5b58\u3059\u308b
 OptionPanel.always_save_folding_state = \u6298\u308a\u7573\u307f\u72b6\u614b\u306e\u5909\u66f4\u3092\u5e38\u306b\u4fdd\u5b58\u3059\u308b
 OptionPanel.always_save_folding_state.tooltip = \u30c1\u30a7\u30c3\u30af\u3059\u308b\u3068\u3001\u6298\u308a\u7573\u307f\u72b6\u614b\u3092\u4fdd\u5b58\u3059\u308b\u304b\u3069\u3046\u304b\u3001\u78ba\u8a8d\u3057\u307e\u3059\u3002
