--- a/freeplane/resources/translations/Resources_it.properties
+++ b/freeplane/resources/translations/Resources_it.properties
@@ -12,7 +12,7 @@ accessories/plugins/EncryptNode.properties_4 = Inserisci la password.
 accessories/plugins/EncryptNode.properties_5 = <html>Ricorda che l'inviolabilit\u00E0 della cifratura<br> dipende quasi completamente dalla qualit\u00E0 della password inserita.
 accessories/plugins/EncryptNode.properties_6 = OK
 accessories/plugins/EncryptNode.properties_7 = Cancella
-accessories/plugins/EncryptNode.properties_insert_encrypted_node_first = Puoi modificare lo stato criptato di un nodo criptato. Inserisci almeno un nodo usando il menu Strumenti.
+accessories/plugins/EncryptNode.properties_insert_encrypted_node_first = E' possibile modificare lo stato di criptatura di un nodo criptato. Inserire almeno un nodo usando il menu Strumenti.
 accessories/plugins/EncryptNode.properties_select_me = Selezionami per continuare!
 accessories/plugins/EncryptNode.properties_wrong_password = La password non \u00E8 corretta.
 accessories/plugins/ExportWithTWiki.properties = File TWiki (*.twi)
@@ -36,10 +36,10 @@ accessories/plugins/ManagePatterns.not_found = Il file degli schemi non pu\u00F2
 accessories/plugins/SaveAll.properties_save_all_cancelled = L'operazione non \u00E8 stata completata.
 action_keystroke_in_use_error = Il tasto rapido {0} richiesto per l'azione {1} \u00e8 gi\u00e0 in uso per l'azione {2}
 add = &Aggiungi
-AddConnectorAction.text = Aggiungi Collegamento grafico
-AddElementaryConditionAction.text = Aggiungi
-AddLocalLinkAction.text = Aggiungi collegamento locale
-AllMapsNodeListAction.text = Cerca e Sostituisci in tutte le mappe
+AddConnectorAction.text = Aggiungere Collegamento grafico
+AddElementaryConditionAction.text = Aggiungere
+AddLocalLinkAction.text = Aggiungere collegamento locale
+AllMapsNodeListAction.text = Trova e Sostituisci in tutte le mappe
 antialias_all = Antialias tutto
 antialias_edges = Antialias Collegamenti
 antialias_none = Antialias niente
@@ -50,11 +50,11 @@ ApplyFormatPlugin.tooltip = Visualizza una finestra tramite cui si possono cambi
 ApplyNoFilteringAction.text = Nessun filtro
 ApplySelectedViewConditionAction.text = Filtra i nodi selezionati
 ApplyToVisibleAction.text = Applica ai nodi filtrati
-as_parent = Come Parente
-AskForHelp.text = Chiedi Aiuto
+as_parent = Come Genitore
+AskForHelp.text = Chiedere Aiuto
 AssignAttributesAction.text = Assegna attributi
 attribute_delete = Cancella tutti i valori
-attribute_delete_value = Cancella questa valore
+attribute_delete_value = Cancella questo valore
 attribute_font_size_tooltip = Attributo grandezza carattere
 attribute_list_box_label_text = Valori esistenti
 attribute_replace = Sostituisci con
@@ -118,10 +118,10 @@ ChangeConnectorArrowsAction.both.text = Entrambe
 ChangeConnectorArrowsAction.forward.text = Avanti
 ChangeConnectorArrowsAction.none.text = Nessuno
 ChangeConnectorArrowsAction.text = Cambia la freccia del collegamento grafico
-ChangeNodeLevelLeftsAction.text = Nodo sinistra
-ChangeNodeLevelLeftsAction.tooltip = Alla sinistra del nodo centrale, i nodi sono stati spostati in basso. Sono diventati figli del fratello superiore.  Alla destra del nodo centrale, i nodi sono stati spostati in alto. Direttamente alla radice, i nodi cambiano lato.
-ChangeNodeLevelRightsAction.text = Nodo destra
-ChangeNodeLevelRightsAction.tooltip = Alla destra del nodo centrale, i nodi sono stati spostati in basso. Sono diventati figli del loro fratello superiore. Sulla sinistra del nodo centrale, i nodi sono stati spostati in alto. Direttamente alla radice, i nodoi cambiano lato.
+ChangeNodeLevelLeftsAction.text = Sposta nodo a sinistra
+ChangeNodeLevelLeftsAction.tooltip = I nodi che si trovano alla sinistra del nodo centrale, verranno spostati in basso; diventeranno nodi figli del fratello superiore. I nodi che si trovano alla destra del nodo centrale, verranno spostati in alto; I nodi collegati direttamente alla radice, camberanno lato.
+ChangeNodeLevelRightsAction.text = Sposta nodo a destra
+ChangeNodeLevelRightsAction.tooltip = I nodi che si trovano alla destra del nodo centrale, verranno spostati in basso; diventeranno nodi figli del fratello superiore. I nodi che si trovano alla sinistra del nodo centrale, verranno spostati in alto. I nodi collegati direttamente alla radice, cambieranno lato.
 choose_background_color = Scegli il colore di sfondo
 choose_cloud_color = Scegli il colore nuvola:
 choose_edge_color = Scegli il colore collegamento
@@ -271,7 +271,7 @@ FitToPage.tooltip = Regola lo zoom in modo che tutta la mappa sia contenuta nell
 fold = Collassa
 FoldAllAction.text = Collassa tutti
 FoldAllAction.tooltip = <html>Collassa il nodo selezionato e tutti i suoi figli.</html>
-FoldOneLevelAction.text = Collassa un livello
+FoldOneLevelAction.text = Collassa di un livello
 FoldOneLevelAction.tooltip = <html>Collassa i nodi selezionati di un livello.</html>
 follow_graphical_link = Vai a:
 FollowLinkAction.text = Segui collegamento
@@ -314,7 +314,7 @@ HideableAction.tooltip = <html>Segnala lo sfondo di ogni nodo modificato.</html>
 HideAllAttributesAction.text = Nascondi tutti gli attributi
 HierarchicalIconsAction.text = Visualizza le icone in maniera gerarchica
 HierarchicalIconsAction.tooltip = Visualizza le icone dei nodi figli anche nei nodi genitori
-HotKeyInfoAction.text = Tasto di riferimento
+HotKeyInfoAction.text = Elenco funzioni tasti
 html_export_based_on_headings = Esporta ad HTML - Basato su intestazioni
 html_export_fold_all = Esporta ad HTML - Collassa tutto
 html_export_fold_currently_folded = Esporta in HTML - Collassa i collassati
@@ -421,7 +421,7 @@ import = Importa
 import_linked_branch_no_link = Il seguente nodo non ha link da cui importare.
 ImportAction.text = &Importa
 ImportBranchAction.text = Importa ramo...
-ImportExplorerFavoritesAction.text = Importa favoriti di Explorer...
+ImportExplorerFavoritesAction.text = Importa preferiti di Internet Explorer...
 ImportFolderStructureAction.text = Importa struttura cartella...
 ImportLinkedBranchAction.text = Importa ramo collegato
 ImportLinkedBranchWithoutRootAction.text = Importa senza radice
@@ -482,7 +482,7 @@ menu_navigate = &Naviga
 menu_view = &Visualizza
 MenuReferenceAction.text = Guida ai menu
 mindmap = Mappa
-MindMapNodesFlavorHandler = Gerarchia del Nodo
+MindMapNodesFlavorHandler = Nodi in modo gerarchico
 mindmaps = Mappe
 mindmaps_desc = Mappe (*.mm)
 mindmaps_filter_desc = Filtri (*.mmfilter)
@@ -497,7 +497,7 @@ ModesMenuAction.Browse.text = Mappa del Browser
 ModesMenuAction.File.text = Esplora file
 ModesMenuAction.MindMap.text = Editor mappe mentali
 most_recent_files = &File recenti
-MoveToRootAction.text = Muovi alla radice
+MoveToRootAction.text = Vai al nodo centrale
 NavigationNextMapAction.text = Mappa successiva
 NavigationPreviousMapAction.text = Mappa precedente
 new_mindmap = Nuova mappa
@@ -508,7 +508,7 @@ NewChildAction.text = Nuovo nodo figlio
 NewMapAction.text = Nuovo
 NewParentNode.text = Nuovo nodo genitore
 NewParentNode.tooltip = <html>Tutti i nodi selezionati sono inviati a un nuovo genitore.</html>
-NewPreviousSiblingAction.text = Nuovo nodo fratello sopra
+NewPreviousSiblingAction.text = Nuovo nodo fratello, sopra
 NewSiblingAction.text = Nuovo nodo fratello
 NextNodeAction.BACK.text = Nodo precedente
 NextNodeAction.BACK_N_FOLD.text = Nodo precedente (collassa)
@@ -549,9 +549,10 @@ OptionalDontShowMeAgainDialog.dontShowAgain = &Non chiedere pi\u00F9.
 OptionalDontShowMeAgainDialog.ok = &Si
 OptionalDontShowMeAgainDialog.rememberMyDescision = &Ricorda la mia scelta.
 OptionPanel.absolute = Assoluto
-OptionPanel.accessories/plugins/AutomaticLayout.properties_PatternTabName = Formattazione automatica degli schemi
+OptionPanel.accessories/plugins/AutomaticLayout.properties_PatternTabName = Formattazione automatica
 OptionPanel.always_fold_all_after_load = Espandi Tutto
 OptionPanel.always_load_last_maps = Apri sempre le ultime e le nuove mappe
+OptionPanel.always_load_last_maps.tooltip = Apri gli ultimi file come da opzioni precedenti, anche avviando Freeplane con doppio click su un file mappa
 OptionPanel.always_save_folding = sempre
 OptionPanel.always_save_folding_state = Salva sempre i cambiamenti allo stato di espansione/collassamento
 OptionPanel.always_save_folding_state.tooltip = Se impostato, anche per la sola azione di collasso/espansione verr\u00e0 richiesto il salvataggio della mappa.
@@ -606,11 +607,11 @@ OptionPanel.defaultfont.tooltip = <html>Il carattere predefinito del nodo. Funzi
 OptionPanel.defaultfontsize = Dimensione predefinita carattere
 OptionPanel.defaultfontstyle = Stile predefinito carattere
 OptionPanel.Defaults = Predefiniti
-OptionPanel.delete_automatic_saves_at_exit = Elimina i salvataggi automatici in chiusura
+OptionPanel.delete_automatic_saves_at_exit = Elimina i salvataggi automatici in uscita
 OptionPanel.delete_automatic_saves_at_exit.tooltip = <html> Se i file devono essere cancellati automaticamente in chiusura normale di Freeplane imposta le variabili seguenti a 'vero'</html>
 OptionPanel.delete_nodes_without_question = Eliminare i nodi senza conferma?
 OptionPanel.delete_nodes_without_question.tooltip = Se questo comando \u00E8 selezionato, i nodi vengono eliminati senza conferma. Se premuto inavvertitamente, ci\u00F2 pu\u00F2 causare perdita di informazioni.
-OptionPanel.disable_cursor_move_paper = Disabilita il cursore "muovi" dei fogli
+OptionPanel.disable_cursor_move_paper = Disabilita il cursore "muovi" sulla pagina
 OptionPanel.disable_cursor_move_paper.tooltip = <html>Non visualizzare il cursore 'muovi' durante il trascinamento del foglio</html>
 OptionPanel.disable_key_type = Disabilita tipi di chiave
 OptionPanel.disable_key_type.tooltip = <html>Scrittura chiavi: Se abilitato entra in modalit\u00E0 edita nodo</html>
@@ -685,7 +686,7 @@ OptionPanel.il__enter_confirms_by_default = Conferma con il tasto Invio
 OptionPanel.it = Italiano / Italiano
 OptionPanel.ja = Giapponese / \u65e5\u672c\u8a9e
 OptionPanel.key_type_adds_new = Aggiungi nuovo tipo di chiave
-OptionPanel.key_type_adds_new.tooltip = <html>Digitazione tasti: sovrascrive il contenuto (falso) / crea una nuova figlia (vera)  (richiede: disable_key_type = false)</html>
+OptionPanel.key_type_adds_new.tooltip = <html>Digitazione tasti: sovrascrive il contenuto (falso) / crea un nuovo figlio (vero)  (richiede: disable_key_type = false)</html>
 OptionPanel.Keystrokes = Tasti Rapidi
 OptionPanel.ko = Coreano / \ud55c\uad6d\uc5b4 (\u97d3\u570b\u8a9e), \uc870\uc120\ub9d0 (\u671d\u9bae\u8a9e)
 OptionPanel.label_font_family = Tipo Carattere
@@ -738,7 +739,7 @@ OptionPanel.nodetext = Nodo di testo
 OptionPanel.nodetext.tooltip = Qui \u00E8 possibile definire il testo del nodo. Quando viene applicato questo modello, il testo precedente viene scartato.
 OptionPanel.nothing = Nulla
 OptionPanel.number_of_different_files_for_automatic_save = Numero di file per il salvataggio automatico
-OptionPanel.number_of_different_files_for_automatic_save.tooltip = <html> Numero n di file differenti in cui salvare la mappa.  Il primo salvataggio automatico viene effettuato sul primo file e cos\u00EC via al salvataggio n+1, fino a tornare al primo (ciclico)</html>
+OptionPanel.number_of_different_files_for_automatic_save.tooltip = <html> Numero di file differenti in cui salvare la mappa.  Il primo salvataggio automatico viene effettuato sul primo file e cos\u00EC via al salvataggio n+1, fino a tornare al primo (ciclico)</html>
 OptionPanel.OK = Salva
 OptionPanel.org.freeplane.plugin.bugreport = Comportamento
 OptionPanel.org.freeplane.plugin.bugreport.allowed = Inviare sempre
@@ -759,7 +760,6 @@ OptionPanel.printonwhitebackground.tooltip = <html>Usa sempre lo sfondo bianco p
 OptionPanel.pt_BR = Portoghese (Brasile) / Portugu\u00eas (Brasil)
 OptionPanel.pt_PT = Portoghese (Portogallo) / Portugu\u00eas (Portugal)
 OptionPanel.relative = Relativo
-OptionPanel.remind_type_of_new_nodes.tooltip = <html>"Chiedi" chieder\u00e0 ogni volta.<br>"Si" visualizzer\u00e0 l'editor di testo avanzato.<br>"No" visualizzer\u00e0 l'editor semplice.</html>
 OptionPanel.remind_use_rich_text_in_new_long_nodes = Usa la formattazione per i nuovi nodi
 OptionPanel.remove_notes_without_question = Rimuovere le note senza conferma?
 OptionPanel.remove_notes_without_question.tooltip = Se selezionato, le note appartenenti  ai nodi selezionati saranno rimosse senza richiesta di conferma. Questo pu\u00f2 causare perdita di informazioni se premuto accidentalmente.
@@ -896,8 +896,8 @@ OptionPanel.toolTipManager.reshowDelay = Tempo di ripetizione, ms
 OptionPanel.tr = Turco / T\u00fcrkmen, \u0422\u04af\u0440\u043a\u043c\u0435\u043d
 OptionPanel.uk_UA = Ucraino / \u0423\u043a\u0440\u0430\u0457\u043d\u0441\u044c\u043a\u0430
 OptionPanel.undefined_font = Carattere non definito
-OptionPanel.undo_levels = Annulla livelli
-OptionPanel.undo_levels.tooltip = <html>Determina quanti passaggi vengono salvati per la funzione "annulla".</html>
+OptionPanel.undo_levels = Azioni memorizzate per il comando "Annulla"
+OptionPanel.undo_levels.tooltip = <html>Determina quanti passaggi vengono salvati per la funzione "Annulla".</html>
 OptionPanel.unfold_on_paste = Espandi nodo quando si "incolla"
 OptionPanel.unfold_on_paste.tooltip = Espandi i nodi quando si Incolla o si sposta, Drag-And-Drop
 OptionPanel.use_common_out_point_for_root_node = I collegamenti iniziano da un punto del nodo radice
@@ -998,7 +998,7 @@ RedoAction.text = Ripristina
 RedoFilterAction.text = Ripristina
 ReminderHookAction.text = Togli avviso
 ReminderHookAction.tooltip = Rimuovi un promemoria da un nodo.
-remove_file_from_list_on_error = File {0} non trovato. Rimuovelo dall'elenco dei file recenti ?
+remove_file_from_list_on_error = File {0} non trovato. Rimuoverlo dall'elenco dei file recenti ?
 remove_shortcut_question = Sostituire il tasto?
 RemoveAllIconsAction.text = Rimuovi tutte le icone
 RemoveConnectorAction.text = Rimuovi Collegamenti grafici
@@ -1011,7 +1011,7 @@ repair_link = Ripara collegamento
 repair_link_question = Impossibile caricare la mappa collegata. Riparare il collegamento manualmente?
 replace = Sostituisci
 ReportBugAction.text = Segnalare un errore
-RequestFeatureAction.text = Richiedi una funzione
+RequestFeatureAction.text = Richiedere una funzione
 reset_to_default = Usa predefinito
 ResetNodeLocationAction.text = Azzera posizione
 RevertAction.text = Ricarica la mappa dal file
@@ -1042,7 +1042,7 @@ selection_method_direct = Puntare per selezionare
 SelectNoteAction.text = Passa all'editor di testo
 SelectNoteAction.tooltip = Passa a risp. dalla finestra delle note
 set_accelerator_on_next_click_action = Cliccare su qualsiasi elemento del menu, per assegnare una nuova scorciatoia
-SetAcceleratorOnNextClickAction.text = Assegnare scorciatoia
+SetAcceleratorOnNextClickAction.text = Assegna scorciatoia
 SetImageByFileChooserAction.text = Collegamento a Immagini
 SetLinkByFileChooserAction.text = Collegamento a file
 SetLinkByTextFieldAction.text = Collegamento ipertestuale web
@@ -1052,10 +1052,10 @@ SetNoteWindowPosition.right.text = Destra
 SetNoteWindowPosition.top.text = Alto
 sf_login_required = Autenticazione a Source Forge richiesta, Continuare ?
 ShowAllAttributesAction.text = Visualizza tutti gli attributi
-ShowAncestorsAction.text = Visualizza precedenti
+ShowAncestorsAction.text = Visualizza ascendenti
 ShowAttributeDialogAction.text = &Gestione attributi
 ShowDescendantsAction.text = Visualizza discendenti
-ShowFilterToolbarAction.text = Filtro
+ShowFilterToolbarAction.text = Barra del Filtro
 ShowHideNoteAction.text = Finestra delle note
 ShowHideNoteAction.tooltip = Mostra o nasconde la finestra delle note.
 ShowSelectedAttributesAction.text = Visualizza attributi selezionati
@@ -1068,8 +1068,8 @@ simplyhtml.alignLeft = sinistra
 simplyhtml.alignRight = destra
 simplyhtml.allCellsRangeLabel = tutte le celle
 simplyhtml.allOccurrencesReplaced = Tutte le occorrenze sostituite
-simplyhtml.appendTableColLabel = Aggiungi col
-simplyhtml.appendTableRowLabel = aggiungi fila
+simplyhtml.appendTableColLabel = Aggiungi colonna, sotto
+simplyhtml.appendTableRowLabel = Aggiungi riga, sotto
 simplyhtml.applyCellAttrLabel = Applica a
 simplyhtml.backgroundLabel = Sfondo:
 simplyhtml.boldItalicName = corsivo grassetto
@@ -1136,10 +1136,10 @@ simplyhtml.formatTableTip = Formato tabella
 simplyhtml.helpLabel = Aiuto
 simplyhtml.htmlTabTitle = Visualizzatore codice HTML
 simplyhtml.imageFileDesc = Immagine da file
-simplyhtml.insertTableColLabel = Inserisci colonna
+simplyhtml.insertTableColLabel = Aggiungi colonna, sopra
 simplyhtml.insertTableLabel = Tabella...
 simplyhtml.insertTableMsg = Quante colonne?
-simplyhtml.insertTableRowLabel = Inserisci riga
+simplyhtml.insertTableRowLabel = Aggiungi riga, sopra
 simplyhtml.insertTableTitle = Inserisci tabella
 simplyhtml.italicName = corsivo
 simplyhtml.layoutTabTitle = visualizza formattazione
@@ -1233,13 +1233,13 @@ SortNodes.tooltip = Ordinamento alfabetico dei figli del nodo
 split = &Dividi
 SplitNode.text = Dividi nodo
 SplitNode.tooltip = <html>Crea un nuovo nodo, per ogni riga del nodo originario</html>
-StringFlavorHandler = Testo semplice come gerarchia del nodo
-StructuredHtmlFlavorHandler = Html come gerarchia del nodo
+StringFlavorHandler = Nodi gerarchici, formato testo semplice
+StructuredHtmlFlavorHandler = Nodi Html in modo gerarchico
 style = Stile
 submenu_keystroke_in_use_error = Il tasto rapido {0} non pu\u00f2 essere utilizzato per il sottomenu {1}. Tasto rapido rimosso.
 svg = SVG
-TimeListAction.text = Visualizza la lista impegni ...
-TimeListAction.tooltip = Visualizza tutti gli impegni e i corrispondenti nodi.
+TimeListAction.text = Visualizza lista avvisi ...
+TimeListAction.tooltip = Visualizza tutti gli avvisi i corrispondenti nodi.
 TimeManagementAction.text = Gestione calendario...
 TimeManagementAction.tooltip = <html>Visualizza la gestione calendario di Kai Toedter.</html>
 ToggleChildrenFoldedAction.text = Collassa/espandi figli
@@ -1258,7 +1258,7 @@ unfold = Espandi
 UnfoldAllAction.text = Espandi tutti
 UnfoldAllAction.tooltip = <html>Espandi i nodi selezionati e tutti i loro figli.</html>
 UnfoldFilteredAncestorsAction.text = Espandi nodi filtrati
-UnfoldOneLevelAction.text = Espandi un livello
+UnfoldOneLevelAction.text = Espandi di un livello
 UnfoldOneLevelAction.tooltip = <html>Espandi il nodo selezionato di un livello.</html>
 update_failed = Aggiornamento fallito con messaggio $1
 UpdateCheckAction.text = Controllo Aggiornamenti
@@ -1267,7 +1267,7 @@ url_error = URL non corretto !
 url_load_error = Impossibile caricare la mappa all'URL:
 url_open_error = Impossibile aprire l'URL {0}.
 used_in_menu = Questo tasto rapido non pu\u00f2 essere impostato, \u00e8 usato per il menu.
-UsePlainTextAction.text = Usa testo semplice
+UsePlainTextAction.text = Usa formattazione testo semplice
 user_config_folder = Cartella configurazione utente: {0}
 user_defined_scale = Scala definita dall'utente
 user_defined_zoom = Definito dall'utente.
