--- a/freeplane/resources/translations/Resources_hr.properties
+++ b/freeplane/resources/translations/Resources_hr.properties
@@ -571,7 +571,7 @@ OptionPanel.automaticFormat_level = Stilovi automatskog izgleda
 OptionPanel.automaticFormat_level1 = Oblik korijenskog \u010dvora
 OptionPanel.automaticFormat_level2 = 1. Razina oblika \u010dvora
 OptionPanel.backup_file_number = Broj zadr\u017eanih sigurnosnih kopija
-OptionPanel.Behaviour = Karakteristika
+OptionPanel.Behaviour = Karakteristike
 OptionPanel.bezier = Bezier
 OptionPanel.bubble = Obla\u010di\u0107
 OptionPanel.ca = Katalonski
@@ -613,7 +613,7 @@ OptionPanel.delete_nodes_without_question = Obri\u0161i \u010dvor(ove) bez potvr
 OptionPanel.delete_nodes_without_question.tooltip = Ako je polje odabrano \u010dvorovi \u0107e biti obrisani bez potvrde. Ovo mo\u017ee prouzro\u010diti gubitak informacija ukoliko nismo pa\u017eljivi kod brisanja.
 OptionPanel.disable_cursor_move_paper = Onemogu\u0107i pomicanje podloge pokaziva\u010dem
 OptionPanel.disable_cursor_move_paper.tooltip = <html>Ne prikazuj pokaziva\u010d 'pomakni' prilikom povla\u010denja podloge </html>
-OptionPanel.disable_key_type = Omogu\u0107i tipkanje
+OptionPanel.disable_key_type = Onemogu\u0107i tipkanje
 OptionPanel.disable_key_type.tooltip = <html>Tipkanje: ako je omogu\u0107eno dozvoljava ure\u0111ivanje \u010dvora</html>
 OptionPanel.display_node_id = Prika\u017ei ID \u010dvora (indetifikacijski broj)
 OptionPanel.don_t_show_note_icons = Ne prikazuj ikone bilje\u0161ki
@@ -682,11 +682,11 @@ OptionPanel.icon.tooltip = Nakon primjene \u010dvor \u0107e imati ovu ikonu.
 OptionPanel.icons.list = Popis prikazanih standardnih ikona
 OptionPanel.icons.list.tooltip = Ovdje mo\u017eete napraviti vlastiti raspored ikona ili onemogu\u0107iti prikaz ikona. Ikone trebaju biti odvojene znakom ";".
 OptionPanel.id = Indonezijski
-OptionPanel.il__enter_confirms_by_default = "Enter" kao standardna potvrda unosa (izlaz iz ure\u0111iva\u010da)
+OptionPanel.il__enter_confirms_by_default = "Enter" kao standardna potvrda unosa 
 OptionPanel.it = Talijanski
 OptionPanel.ja = Japanski
-OptionPanel.key_type_adds_new = Tipkanje dodaje novi sadr\u017eaj
-OptionPanel.key_type_adds_new.tooltip = <html>Tipkanje: prepisuje sadr\u017eaj \u010dvora (neistina - ako nije ozna\u010deno) / kreira novi bratski \u010dvor (istina -ako je ozna\u010deno)  (zahtijeva se: disable_key_type = false)</html>
+OptionPanel.key_type_adds_new = Tipkanje dodaje novi bratski \u010dvor
+OptionPanel.key_type_adds_new.tooltip = <html>Tipkanje: prepisuje sadr\u017eaj \u010dvora ( ako nije ozna\u010deno) / kreira novi bratski \u010dvor (ako je ozna\u010deno); uvijet: tipkanje mora biti omogu\u0107eno )</html>
 OptionPanel.Keystrokes = Tipkovni\u010dke kratice
 OptionPanel.ko = Korejski
 OptionPanel.label_font_family = Oblik slova
@@ -788,7 +788,7 @@ OptionPanel.separator.accessories/plugins/AutomaticLayout.properties_PatternSepa
 OptionPanel.separator.anti_alias = Zagla\u0111ivanje
 OptionPanel.separator.attributes = Svojstva
 OptionPanel.separator.automatic_save = Automatsko snimanje
-OptionPanel.separator.behaviour = Karakteristika
+OptionPanel.separator.behaviour = Karakteristike
 OptionPanel.separator.browser = Preglednik
 OptionPanel.separator.CloudControls = Obla\u010di\u0107i
 OptionPanel.separator.commands_for_the_program = Naredbe programa
