--- a/freeplane/resources/translations/Resources_ja.properties
+++ b/freeplane/resources/translations/Resources_ja.properties
@@ -399,7 +399,7 @@ icon_smily_bad = [\u4e0d\u6a5f\u5acc]
 icon_stop = [\u8d64\u4fe1\u53f7]
 icon_stop-sign = [\u4e2d\u6b62]
 icon_up = [\u4e0a\u5411\u304d]
-icon_user_icon = \u30e6\u30fc\u30b6\u30fc\u30a2\u30a4\u30b3\u30f3
+icon_user_icon = \u30e6\u30fc\u30b6\u30a2\u30a4\u30b3\u30f3
 icon_wizard = [\u9a5a\u7570\u7684]
 icon_xmag = [\u691c\u8a0e\u4e2d\u3001\u8981\u691c\u8a0e]
 icon_yes = [\u306a\u308b\u307b\u3069\uff01]
@@ -414,7 +414,7 @@ IconGroupPopupAction.people.text = \u4eba\u3005
 IconGroupPopupAction.signs.text = \u6a19\u8b58\uff06\u8a18\u53f7
 IconGroupPopupAction.smiley.text = \u30b9\u30de\u30a4\u30ea\u30fc
 IconGroupPopupAction.time.text = \u6642\u523b
-IconGroupPopupAction.user.text = \u30e6\u30fc\u30b6\u30fc\u30a2\u30a4\u30b3\u30f3
+IconGroupPopupAction.user.text = \u30e6\u30fc\u30b6\u30a2\u30a4\u30b3\u30f3
 IconSelectionPlugin.text = \u30a2\u30a4\u30b3\u30f3\u3092\u9078\u629e...
 IconSelectionPlugin.tooltip = \u30b5\u30d6\u30a6\u30a3\u30f3\u30c9\u30a6\u306b\u30a2\u30a4\u30b3\u30f3\u7fa4\u3092\u8868\u793a\u3057\u3001\u9078\u629e\u3059\u308b\u3053\u3068\u304c\u3067\u304d\u307e\u3059\u3002
 import = \u30a4\u30f3\u30dd\u30fc\u30c8
@@ -449,7 +449,7 @@ load = \u8aad\u307f\u8fbc\u307f(&L)
 LoadAcceleratorPresetsAction.textPatterns.text = \u30c6\u30ad\u30b9\u30c8\u30d1\u30bf\u30fc\u30f3
 locking_failed_by_open = \u30de\u30c3\u30d7 $1 \u306e\u30ed\u30c3\u30af\u306b\u5931\u6557\u3057\u307e\u3057\u305f\u3002\u8aad\u8fbc\u5c02\u7528\u3067\u958b\u304d\u307e\u3059\u3002
 locking_failed_by_save_as = \u30de\u30c3\u30d7 $1 \u306e\u30ed\u30c3\u30af\u306b\u5931\u6557\u3057\u307e\u3057\u305f\u3002\u300c\u540d\u524d\u3092\u4ed8\u3051\u3066\u4fdd\u5b58...\u300d\u306f\u4e2d\u6b62\u3057\u307e\u3057\u305f\u3002
-locking_old_lock_removed = <html>\u30de\u30c3\u30d7 $1 \u306f<br>\u30e6\u30fc\u30b6\u30fc $2 \u306b\u30ed\u30c3\u30af\u3055\u308c\u3066\u3044\u307e\u3059\u3002<br>\u30ed\u30c3\u30af\u6307\u5b9a\u304c\u53e4\u3044\u306e\u3067\u3001\u30ed\u30c3\u30af\u3092\u3092\u89e3\u9664\u3057\u307e\u3059\u304b\uff1f</html>
+locking_old_lock_removed = <html>\u30de\u30c3\u30d7 $1 \u306f<br>\u30e6\u30fc\u30b6 $2 \u306b\u30ed\u30c3\u30af\u3055\u308c\u3066\u3044\u307e\u3059\u3002<br>\u30ed\u30c3\u30af\u6307\u5b9a\u304c\u53e4\u3044\u306e\u3067\u3001\u30ed\u30c3\u30af\u3092\u89e3\u9664\u3057\u307e\u3059\u304b\uff1f</html>
 long_node_changed_cancel = \u30ce\u30fc\u30c9\u306f\u5909\u66f4\u3055\u308c\u3066\u3044\u307e\u3059\u3002\u5909\u66f4\u3092\u7834\u68c4\u3057\u307e\u3059\u304b\uff1f
 long_node_changed_submit = \u30ce\u30fc\u30c9\u306f\u5909\u66f4\u3055\u308c\u3066\u3044\u307e\u3059\u3002\u5909\u66f4\u3092\u4fdd\u5b58\u3057\u307e\u3059\u304b\uff1f
 lots_of_links_warning = \u540c\u4e00\u30ce\u30fc\u30c9\u306b\u591a\u304f\u306e\u30ea\u30f3\u30af\u3092\u4f5c\u6210\u3057\u3088\u3046\u3068\u3057\u3066\u3044\u307e\u3059\u3002\u672c\u5f53\u306b\u3053\u308c\u3089\u306e\u30ea\u30f3\u30af\u3092\u4f5c\u6210\u3057\u305f\u3044\u3067\u3059\u304b?
@@ -466,8 +466,8 @@ ManagePatternsPopupDialog.remove = \u30d1\u30bf\u30fc\u30f3\u3092\u524a\u9664
 ManagePatternsPopupDialog.Save = \u4fdd\u5b58\u3057\u3066\u623b\u308b
 map_already_exists = \u540c\u540d\u306e\u30de\u30c3\u30d7\u304c\u3042\u308a\u307e\u3059\u3002\u4e0a\u66f8\u304d\u4fdd\u5b58\u3057\u307e\u3059\u304b\uff1f
 map_corrupted = \u30de\u30c3\u30d7\u304c\u58ca\u308c\u3066\u3044\u307e\u3059\u3002\u8a73\u7d30\u3092\u8868\u793a\u3057\u307e\u3059\u304b\uff1f
-map_locked_by_open = <html>\u30de\u30c3\u30d7 $1 \u306f\u5225\u306e\u30e6\u30fc\u30b6\u30fc $2 \u304c\u7de8\u96c6\u4e2d\u3067\u3059\u3002<br>\u8aad\u8fbc\u5c02\u7528\u3067\u958b\u304d\u307e\u3059\u3002</html>
-map_locked_by_save_as = <html>\u30de\u30c3\u30d7 $1 \u306f\u5225\u306e\u30e6\u30fc\u30b6\u30fc $2 \u304c\u7de8\u96c6\u4e2d\u3067\u3059\u3002<br>\u300c\u540d\u524d\u3092\u4ed8\u3051\u3066\u4fdd\u5b58...\u300d\u306f\u4e2d\u6b62\u3057\u307e\u3057\u305f\u3002</html>
+map_locked_by_open = <html>\u30de\u30c3\u30d7 $1 \u306f\u5225\u306e\u30e6\u30fc\u30b6 $2 \u304c\u7de8\u96c6\u4e2d\u3067\u3059\u3002<br>\u8aad\u8fbc\u5c02\u7528\u3067\u958b\u304d\u307e\u3059\u3002</html>
+map_locked_by_save_as = <html>\u30de\u30c3\u30d7 $1 \u306f\u5225\u306e\u30e6\u30fc\u30b6 $2 \u304c\u7de8\u96c6\u4e2d\u3067\u3059\u3002<br>\u300c\u540d\u524d\u3092\u4ed8\u3051\u3066\u4fdd\u5b58...\u300d\u3092\u4e2d\u6b62\u3057\u307e\u3057\u305f\u3002</html>
 map_not_saved = \u30de\u30c3\u30d7\u306f\u307e\u3060\u4fdd\u5b58\u3055\u308c\u3066\u3044\u307e\u305b\u3093\u3002
 MapBackgroundColorAction.text = \u30de\u30c3\u30d7\u306e\u80cc\u666f\u8272...
 MaxNodeWidthAction.text = \u6700\u5927\u30ce\u30fc\u30c9\u5e45\u306e\u8a2d\u5b9a...
@@ -776,7 +776,7 @@ OptionPanel.save_only_intrisically_needed_ids.tooltip = <html>\u30c1\u30a7\u30c3
 OptionPanel.script = \u30b9\u30af\u30ea\u30d7\u30c8\u306e\u5185\u5bb9
 OptionPanel.script.tooltip = \u30b9\u30af\u30ea\u30d7\u30c8\u306f\u3001groovy \u306e\u30bd\u30fc\u30b9\u30b3\u30fc\u30c9\u5f62\u5f0f\u3067\u8a18\u8ff0\u3057\u3066\u4e0b\u3055\u3044\u3002
 OptionPanel.script_directories = \u30b9\u30af\u30ea\u30d7\u30c8\u306e\u30c7\u30a3\u30ec\u30af\u30c8\u30ea
-OptionPanel.script_user_key_name_for_signing = \u7f72\u540d\u30e6\u30fc\u30b6\u30fc\u30ad\u30fc\u306e\u4ee3\u7528\u30a8\u30a4\u30ea\u30a2\u30b9
+OptionPanel.script_user_key_name_for_signing = \u7f72\u540d\u30e6\u30fc\u30b6\u30ad\u30fc\u306e\u4ee3\u7528\u30a8\u30a4\u30ea\u30a2\u30b9
 OptionPanel.script_user_key_name_for_signing.tooltip = <html>\u4f5c\u6210\u3057\u305f\u30b9\u30af\u30ea\u30d7\u30c8\u306b\u7f72\u540d\u3092\u4ed8\u3051\u305f\u3044\u5834\u5408\u306f\u3001\u3053\u3053\u306b\u305d\u306e\u30ad\u30fc\u306e\u30a8\u30a4\u30ea\u30a2\u30b9\u3092\u5165\u529b\u3057\u3066\u304f<br>\u3060\u3055\u3044\u3002\u305d\u306e\u30ad\u30fc\u306f\u3001\u30c7\u30d5\u30a9\u30eb\u30c8\u30fb\u30ad\u30fc\u96c6\u306b\u542b\u307e\u308c\u308b\u3082\u306e\u3068\u60f3\u5b9a\u3055\u308c\u3066\u3044\u307e\u3059\u3002\u30ad\u30fc\u306e\u306a<br>\u304b\u3067\u3082\u7279\u306b\u6a5f\u5bc6\u6027\u304c\u9ad8\u3044\u30d1\u30b9\u30ef\u30fc\u30c9\u306f\u3001\u30ad\u30fc\u96c6\u306e\u30d1\u30b9\u30ef\u30fc\u30c9\uff08\u3053\u308c\u304c\u30c7\u30d5\u30a9\u30eb\u30c8\u30fb\u30ad\u30fc\u96c6<br>\u3068\u306a\u308b\uff09\u3068\u540c\u3058\u3082\u306e\u3067\u306a\u3051\u308c\u3070\u306a\u308a\u307e\u305b\u3093\u3002</html>
 OptionPanel.scrollbar_increment = \u901f\u3000\u5ea6
 OptionPanel.selection_method = \u9078\u629e\u65b9\u6cd5
@@ -1043,7 +1043,7 @@ SelectNoteAction.text = \u30ce\u30fc\u30c8\u7de8\u96c6\u306b\u5207\u308a\u66ff\u
 SelectNoteAction.tooltip = \u64cd\u4f5c\u5bfe\u8c61\u3092\u30de\u30c3\u30d7\u30a6\u30a3\u30f3\u30c9\u30a6\u304b\u3089\u30ce\u30fc\u30c8\u30a6\u30a4\u30f3\u30c9\u30a6\u306b\u5207\u308a\u66ff\u3048\u307e\u3059\u3002
 set_accelerator_on_next_click_action = <html>\u30e1\u30cb\u30e5\u30fc\u306e\u306a\u304b\u304b\u3089\u30b7\u30e7\u30fc\u30c8\u30ab\u30c3\u30c8\u3092\u5272\u308a\u5f53\u3066\u308b\u6a5f\u80fd\u3092\u9078\u3093\u3067\u30af\u30ea\u30c3\u30af\u3059\u308b\u3068\u3001<br>\u30ad\u30fc\u5272\u308a\u5f53\u3066\u30c0\u30a4\u30a2\u30ed\u30b0\u304c\u958b\u304d\u307e\u3059\u3002</html>
 SetAcceleratorOnNextClickAction.text = \u30b7\u30e7\u30fc\u30c8\u30ab\u30c3\u30c8\u30ad\u30fc\u306e\u5272\u308a\u5f53\u3066
-SetImageByFileChooserAction.text = \u753b\u50cf (\u30d5\u30a1\u30a4\u30eb\u9078\u629e)...
+SetImageByFileChooserAction.text = \u753b\u50cf\uff08\u30d5\u30a1\u30a4\u30eb\u9078\u629e or \u30ea\u30f3\u30af\u304b\u3089\uff09...
 SetLinkByFileChooserAction.text = \u30ea\u30f3\u30af\u5148\u3092\u6307\u5b9a (\u30d5\u30a1\u30a4\u30eb\u9078\u629e)...
 SetLinkByTextFieldAction.text = \u30ea\u30f3\u30af\u5148\u3092\u6307\u5b9a (\u30c6\u30ad\u30b9\u30c8\u5165\u529b)...
 SetNoteWindowPosition.bottom.text = \u4e0b
@@ -1270,9 +1270,9 @@ used_in_menu = \u30c7\u30d5\u30a9\u30eb\u30c8\u30e1\u30cb\u30e5\u30fc\u3067\u4f7
 UsePlainTextAction.text = \u30d7\u30ec\u30fc\u30f3\u30c6\u30ad\u30b9\u30c8\u3092\u4f7f\u7528
 user_config_folder = User configuration folder: {0}
 user_defined_scale = \u753b\u9762\u8868\u793a\u3000\u00d7
-user_defined_zoom = \u30e6\u30fc\u30b6\u30fc\u6307\u5b9a
-user_defined_zoom_status_bar = \u30e6\u30fc\u30b6\u30fc\u306e\u6307\u5b9a\u306b\u3088\u308a\u753b\u9762\u8868\u793a\u3092 {0}% \u306b\u8a2d\u5b9a\u3057\u3066\u3044\u307e\u3059\u3002
-user_icon = \u30e6\u30fc\u30b6\u30fc\u30a2\u30a4\u30b3\u30f3 "$1"
+user_defined_zoom = \u30e6\u30fc\u30b6\u6307\u5b9a
+user_defined_zoom_status_bar = \u30e6\u30fc\u30b6\u306e\u6307\u5b9a\u306b\u3088\u308a\u753b\u9762\u8868\u793a\u3092 {0}% \u306b\u8a2d\u5b9a\u3057\u3066\u3044\u307e\u3059\u3002
+user_icon = \u30e6\u30fc\u30b6\u30a2\u30a4\u30b3\u30f3 "$1"
 user_zoom = \u3000\u3000\u3000\u3000\u3000\u5370\u5237\u500d\u7387 (0.0 - 2.0)\uff1a
 UseRichFormattingAction.text = \u30ea\u30c3\u30c1\u30c6\u30ad\u30b9\u30c8\u3092\u4f7f\u7528
 version_up_to_date = \u3054\u4f7f\u7528\u4e2d\u306e\u3082\u306e\u304c\u6700\u65b0\u30d0\u30fc\u30b8\u30e7\u30f3\u3067\u3059\u3002
