--- a/freeplane/resources/translations/Resources_hr.properties
+++ b/freeplane/resources/translations/Resources_hr.properties
@@ -1,7 +1,7 @@
 about_text = Freeplane - program za izradu mentalnih mapa i nadogradnju znanja\nCopyright (C) 2000-2009 Joerg Mueller, Dimitry Polivaev, Predrag Cuklin, Christian Foltin, Daniel Polansky i ostali.\nOvaj program je besplatan (GPL)\nHome: http://freeplane.sourceforge.net/\nZabavite se!\nVerzija:
 AboutAction.text = O programu
 acceleratorPresets = Postavke grupe tipkovni\u010dkih kratica F-trake
-accelerators_loading_error = Ne mogu u\u010ditati tipkovni\u010dke kratice iz {0} 
+accelerators_loading_error = Ne mogu u\u010ditati tipkovni\u010dke kratice iz {0}
 accessories/plugins/ApplyFormatPlugin.dialog.title = Promjena oblika svih \u010dvorova
 accessories/plugins/AutomaticLayout.properties_StyleDialogTitle = Promijeni uzorak
 accessories/plugins/EncryptNode.properties_0 = Odaberi lozinku za \u0161ifrirani \u010dvor.
@@ -526,12 +526,12 @@ node_location_help = Povla\u010denje mijenja poziciju \u010dvora, ctrl+povla\u01
 NodeBackgroundColorAction.text = &Pozadinska boja \u010dvora...
 NodeColorAction.text = Boja teksta \u010dvora...
 NodeColorBlendAction.text = Pomije\u0161aj boje
-NodeDownAction.text = \u010cvor prema dolje
+NodeDownAction.text = \u010cvor dolje
 NodeListAction.text = Prona\u0111i i zamijeni...
 NodeListAction.tooltip = Poka\u017ei sve \u010dvorove kao pretra\u017eiv popis sa svojstvima filtra.
 NodeShapeAction.bubble.text = &Mjehuri\u0107
 NodeShapeAction.fork.text = Ra&\u010dva
-NodeUpAction.text = \u010cvor prema gore
+NodeUpAction.text = \u010cvor gore
 nonboldify_branch = Poni\u0161ti podebljanje
 nonitalicise_branch = Poni\u0161ti uko\u0161enost
 normal = Uobi\u010dajen
@@ -552,6 +552,7 @@ OptionPanel.absolute = Apsolutne
 OptionPanel.accessories/plugins/AutomaticLayout.properties_PatternTabName = Automatski ure\u0111eni uzorci
 OptionPanel.always_fold_all_after_load = Sklopi sve
 OptionPanel.always_load_last_maps = U\u010ditaj posljednje i nove mape
+OptionPanel.always_load_last_maps.tooltip = Otvara posljednje datoteke prema gore odabranim postavkama, \u010dak i pokretanjem FP odabirom druge datoteke.
 OptionPanel.always_save_folding = Uvijek snimi
 OptionPanel.always_save_folding_state = Uvijek spremi promjene polo\u017eaja sklopljenih i rasklopljenih \u010dvorova.
 OptionPanel.always_save_folding_state.tooltip = Ova opcija \u0107e prilikom zatvaranja programa upozoriti na promijene izgleda stabla mape.
@@ -759,7 +760,6 @@ OptionPanel.printonwhitebackground.tooltip = <html>Uvijek koristi bijelu pozadin
 OptionPanel.pt_BR = Portugalski BR
 OptionPanel.pt_PT = Portugalski PT
 OptionPanel.relative = Relativne
-OptionPanel.remind_type_of_new_nodes.tooltip = <html>"Pitanje" Prikazat \u0107e se pitanje za bolje oblikovanje \u010dvora (koristi ako si u dvojbi).<br>"Da" \u0107e prikazati ure\u0111iva\u010d za bolje oblikovanje teksta.<br>"Ne"  \u0107e prikazati jednostavan ure\u0111iva\u010d teksta.</html>
 OptionPanel.remind_use_rich_text_in_new_long_nodes = Koristi bolje oblikovanje za sve \u010dvorove
 OptionPanel.remove_notes_without_question = Obri\u0161i bilje\u0161ke bez upita.
 OptionPanel.remove_notes_without_question.tooltip = Ako je polje odabrano pripadaju\u0107e bilje\u0161ke odabranog \u010dvora bit \u0107e obrisane bez potvrde.Ovo mo\u017ee prouzro\u010diti gubitak informacija ukoliko nismo pa\u017eljivi kod brisanja.
@@ -908,8 +908,8 @@ OptionPanel.vi = Vijetnamski
 OptionPanel.wheel_velocity = Brzina
 OptionPanel.wheel_velocity.tooltip = Ve\u0107a vrijednost rezultira kod pomaka kota\u010di\u0107a mi\u0161a br\u017ee u\u010dinke na mapi.
 OptionPanel.windows = Windows
-OptionPanel.zh_CN = Kineski CN
-OptionPanel.zh_TW = Tajvanski
+OptionPanel.zh_CN = Kineski, pojednostavljeno
+OptionPanel.zh_TW = Kineski, tradicionalno
 org.freeplane.plugin.bugreport.agree = Po\u0161alji
 org.freeplane.plugin.bugreport.always_agree = Uvijek po\u0161alji
 org.freeplane.plugin.bugreport.always_deny = Nikad ne \u0161alji
