--- a/freeplane/resources/translations/Resources_de.properties
+++ b/freeplane/resources/translations/Resources_de.properties
@@ -248,6 +248,7 @@ DeleteLevelStyleAction.text = Entferne Ebene vom automatischen Knotenstil
 DeleteStyleAction.text = Entferne Knotenstil
 DeleteUserStyleAction.text = Entferne benutzerdefinierten Knotenstil
 dialect_info.app = die Mindmap-Datei {0} wurde mit dem Programm {1} erzeugt.
+dialect_info.later_version = die Mindmap-Datei {0} wurde mit einer späteren Version dieses Programms erzeugt.
 dialect_info.unknownApp = die eingelesene Mindmap wurde mit einem unbekannten Programm erzeugt.
 dialect_info.unknownURL = die Webseite ist unbekannt
 dialect_info.url = Bitte die Programm-Webseite {0} f\u00fcr weiterf\u00fchrende Informationen konsultieren
