--- a/freeplane/viewer-resources/translations/Resources_en.properties
+++ b/freeplane/viewer-resources/translations/Resources_en.properties
@@ -248,6 +248,7 @@ DeleteLevelStyleAction.text = Remove level style
 DeleteStyleAction.text = Remove style
 DeleteUserStyleAction.text = Remove user defined style
 dialect_info.app = Mind map file {0} was created with program {1}.
+dialect_info.later_version = Mind map file {0} was created with some later version of this program.
 dialect_info.unknownApp = Mind map file {0} was created by unknown program.
 dialect_info.unknownURL = Its web site is not known.
 dialect_info.url = Visit program web site {0} for more info.
